<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- Remember to set the root element of strings.xml to be <resources xmlns:xliff="http://schemas.android.com/apk/res-auto"> so it recognizes the xliff tags -->

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- Menu for refresh only for debug -->
    <string name="action_refresh">Refresh</string>
    <!-- Menu for map location -->
    <string name="action_map">Map Location</string>
    <!-- Menu for sharing -->
    <string name="action_share">Share Detail</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- preference setting location label -->
    <string name="pref_location_label">Location</string>
    <!-- preference setting location default [CHAR LIMIT = NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>
    <!-- preference setting location key [CHAR LIMIT = NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- preference setting location key [CHAR LIMIT = NONE] -->
    <string name="pref_unit_key" translatable="false">unit</string>
    <!-- preference setting location label -->
    <string name="pref_unit_label">Unit</string>
    <!-- preference setting unit dialog -->
    <string name="pref_unit_dialog">Choose a Unit</string>
    <!-- preference setting location default [CHAR LIMIT = NONE] -->
    <string name="pref_unit_metric" translatable="false">metric</string>
    <!-- preference setting location default [CHAR LIMIT = NONE] -->
    <string name="pref_unit_imperial" translatable="false">imperial</string>

    <!-- preference setting unit entries [CHAR LIMIT = NONE] -->
    <string-array name="pref_unit_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <!-- preference setting units entry values  -->
    <string-array name="pref_unit_entry_values" translatable="false">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!--Format of temperature including the ° -->
    <string name="format_temparature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.joseperdomo.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!--para mostrar notificaciones-->
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_show_notifications">Show Notificacions</string>
    <string name="pref_show_notifications_key">show_notifications</string>
</resources>
